--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,15 @@
   width: 280px;
   height: 190px;
 }
+
+@media (min-width: 1270px) and (max-width: 1285px) {
+  .account-width {
+    width: 250px;
+    cursor: pointer;
+  }
+  
+  .account-image {
+    width: 250px;
+    height: 160px;
+  }
+}
