added background image on home page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
   width: auto;
 }
 
+.home-container {
+  width: 100vw !important;
+  height: 100vh !important;
+  background: url("./images/home_bg_opacity.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .main-container {
   height: 100vh !important;
   margin-bottom: 0% !important;
