--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,14 @@ a {
   height: 100vh;
 }
 
+.career-header {
+  background: url("./images/account_two.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 400px;
+}
 
 @media (min-width: 1270px) and (max-width: 1285px) {
   .account-width {
