--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,11 @@ a {
   height: 400px;
 }
 
+.career-image {
+  height: 100%;
+  width: 100%;
+}
+
 @media (min-width: 1270px) and (max-width: 1285px) {
   .account-width {
     width: 250px;
