--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,10 @@ a {
   width: 100%;
 }
 
+.career-items {
+  height: 50%;
+}
+
 @media (min-width: 1270px) and (max-width: 1285px) {
   .account-width {
     width: 250px;
