--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("./fonts/style.css");
+
+body {
+  font-family: "Carviar Dreams Bold" !important;
+}
+
 .welcome-one {
   height: 100vh;
   margin-bottom: 0% !important;
